@@ -33,27 +33,24 @@ class CljTomcatFormatTest extends Specification {
   implicit val _DEBUG = false
 
   // Input
-  // TODO: Yali to update this to current output
   val row = "2012-12-03 04:49:53  - 37  127.0.0.1 GET localhost /i  200 http://yalisassoon.github.com/cl-collector-tests/async.html Mozilla%2F5.0+%28Windows+NT+6.1%3B+WOW64%3B+rv%3A16.0%29+Gecko%2F20100101+Firefox%2F16.0  ?ev_ca=Mixes&ev_ac=Play&ev_la=MRC%2Ffabric-0503-mix&ev_va=0.0&p=web&tid=755049&uid=915bc1dd0a4c5ba5&fp=2196241488&vid=3&tv=js-0.8.0&lang=en-GB&refr=http%3A%2F%2Fyalisassoon.github.com%2F&f_pdf=1&f_qt=1&f_realp=0&f_wma=1&f_dir=0&f_fla=1&f_java=1&f_gears=0&f_ag=1&res=1920x1080&cd=24&cookie=1&tz=Europe%2FLondon&url=http%3A%2F%2Fyalisassoon.github.com%2Fcl-collector-tests%2Fasync.html&uid=7fc17b64-b202-46e4-8d3a-4d144edf2b23  - - -"
 
   // Output
-  // TODO: Yali to update expected values
   val expected = new SnowPlowEvent().tap { e =>
     e.dt = "2012-12-03"
     e.tm = "04:49:53"
     e.txn_id = "755049"
-    e.user_id = "915bc1dd0a4c5ba5"
+    e.user_id = "7fc17b64-b202-46e4-8d3a-4d144edf2b23"
     e.user_ipaddress = "127.0.0.1"
     e.visit_id = 3
     e.page_url = "http://yalisassoon.github.com/cl-collector-tests/async.html"
-    e.page_title = "Asynchronous website/webapp examples for snowplow.js"
     e.page_referrer = "http://yalisassoon.github.com/"
     e.br_name = "Firefox"
     e.br_family = "Firefox"
-    e.br_version = "16.0"
+    e.br_version = null // Our current parser lib couldn't figure out this version
     e.br_type = "Browser"
     e.br_renderengine = "GECKO"
-    e.br_lang = "en"
+    e.br_lang = "en-GB"
     e.br_cookies = true
     e.br_features = List("ag, java, pdf, wma")
     e.os_name = "Windows"
@@ -98,10 +95,6 @@ class CljTomcatFormatTest extends Specification {
     // Page
     "have page_url (Page URL) = %s".format(expected.page_url) in {
       actual.page_url must_== expected.page_url
-    }
-    // Tracking a page view, so we have a page title
-    "have page_title (Page Title) = %s".format(expected.page_title) in {
-      actual.page_title must_== expected.page_title
     }
     "have page_referrer (Page Referrer) = %s".format(expected.page_referrer) in {
       actual.page_referrer must_== expected.page_referrer
